2010-06-12  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* telemetry.c, config.c, aprx.h, doc/aprx-manual.odt
	    New <telemetry> config section, be able to tx
	    telemetry to RF ports.

	* beacon.c:
	    Error reporting additions.

	* erlang.c, aprx-stat.c, aprx.h, telemetry.c:
	    Use pre-processor conditionals to select only small
	    subset of storage and processing codes used for
	    erlang data in embedded mode.

	* parse_aprs.c:
	    Compile warning silencing.

2010-06-10  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* kiss.c, ttyreader.c, dprsgw.c, aprx.h:
	    Tracked specification origins of each of the three
	    different CRC-16 calculations that this code has.
	    What was called "crc_ccitt" was in fact something
	    totally different: the SMACK CRC16.

2010-06-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* README, ROADMAP, TODO, INSTALL, PROTOCOLS:
	    Updates on plans and rough guides.

	* TIMESTAMP-AT-APRSIS, timestamp.c:
	    A proposal to put about 1ms resolution timestamps
	    on APRSIS with full backwards compatibility.

	* aprx.c:
	    Giving this version code: APRX1J

	* dprsgw.c, digipeater.c, aprx.h, doc/aprx-manual.odt:
	    Clean DPRS Rx gateway code.

	* interface.c:
	    Correct 3rd-party packet gating filter behaviour:
	    If there are _no_ filters, pass all packets thru.

	* interface.c, aprx.h, dprsgw.c, igate.c:
	    Rate-limit source callsigns per source interface to
	    once per 30 seconds.  RF iGate DPRS messages to APRS
	    as 3rd-party messages.

2010-06-06  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* parse_aprs.c, dprsgw.c:
	    Rudimentary GPSxyz -> APRS symbol mapping for DPRS,
	    with GPSxyz overlay character where possible.
	    Also IDENT TEXT, if any.

	* debian/aprx.init:
	    The "restart" command fails to work quite often.
	    The reason being "set -e"...

	* aprx.h, igate.c, dprsgw.c, ttyreader.c, ax25.c:
	    igate_to_aprsis(... , STRICTAX25)  -- new flag